--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
         <style>
+            html,
+            body {
+                height: 100%;
+            }
             .dropdown:hover .dropdown-menu{
                 display: block;
             }
@@ -31,85 +35,87 @@
             }
         </style>
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('assets/luc_logo.png') }}" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
-                            Accueil
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: yellow" id="navbarClubMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Club
-                        </a>
-                        <div class="dropdown-menu" style="background: yellow" aria-labelledby="navbarClubMenuLink">
-                            <a class="dropdown-item" href="{{ path('histoire') }}">Histoire</a>
-                            <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
-                            <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
-                            <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
-                            <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Disciplines
-                        </a>
-                        <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
-                            <a class="dropdown-item" href="{{ path('judo') }}">Judo</a>
-                            <a class="dropdown-item" href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
-                            <a class="dropdown-item" href="{{ path('taiso') }}">Taiso</a>
-                            <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Inscription
-                        </a>
-                        <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
-                            <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
-                            <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Actualités
-                        </a>
-                        <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
-                            <a class="dropdown-item" href="{{ path('newsletter') }}">Newsletter</a>
-                            <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
-                            <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: black; background: #503D07" href="{{ path('documents') }}">
-                            Documents
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
-                            Documents
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        {% if is_granted('ROLE_ADMIN') %}
-            <div class="text-center">
-                If you see this, that means you're admin.
-                <a href="{{ path('admin') }}">Admin</a>
-                <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-        <footer class="footer mt-auto py-3">
-            <div class="container text-center text-md-left">
+    <body class="d-flex flex-column">
+        <div class="flex-grow-1 flex-shrink-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('assets/luc_logo.png') }}" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
+                                Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: yellow" id="navbarClubMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Club
+                            </a>
+                            <div class="dropdown-menu" style="background: yellow" aria-labelledby="navbarClubMenuLink">
+                                <a class="dropdown-item" href="{{ path('histoire') }}">Histoire</a>
+                                <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
+                                <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
+                                <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
+                                <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Disciplines
+                            </a>
+                            <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
+                                <a class="dropdown-item" href="{{ path('judo') }}">Judo</a>
+                                <a class="dropdown-item" href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
+                                <a class="dropdown-item" href="{{ path('taiso') }}">Taiso</a>
+                                <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Inscription
+                            </a>
+                            <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
+                                <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
+                                <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Actualités
+                            </a>
+                            <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
+                                <a class="dropdown-item" href="{{ path('newsletter') }}">Newsletter</a>
+                                <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
+                                <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: black; background: #503D07" href="{{ path('documents') }}">
+                                Documents
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
+                                Documents
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            {% if is_granted('ROLE_ADMIN') %}
+                <div class="text-center">
+                    If you see this, that means you're admin.
+                    <a href="{{ path('admin') }}">Admin</a>
+                    <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+            {% endif %}
+            {% block body %}{% endblock %}
+            {% block javascripts %}{% endblock %}
+        </div>
+        <footer class="footer mt-auto py-3 flex-shrink-0">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-4 mx-auto">
                         <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
