--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -10,88 +10,100 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="text-center" style="background-image: url('https://dummyimage.com/1000x800/a80202/ffffff')">
-        <h1 class="display-3" style="color: black">LUC JUDO<br/>
-            <small class="text-white">Judo - Ju Jitsu - Ne Waza - Taiso</small>
-        </h1>
-    </div>
     <div class="container">
-        <div class="row text-center">
-            {% for post in posts %}
-                <div class="col-lg-4">
-                    {% if post.image %}
-                        <img class="bd-placeholder-img rounded-circle"
-                             width="140"
-                             height="140"
-                             role="img"
-                             aria-label="Placeholder: 140x140"
-                             src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
+        <div id="carouselAcceuilPosts" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselAcceuilPosts" data-slide-to="{{ first.id }}" class="active"></li>
+                <li data-target="#carouselAcceuilPosts" data-slide-to="{{ second.id }}"></li>
+                <li data-target="#carouselAcceuilPosts" data-slide-to="{{ third.id }}"></li>
+                <li data-target="#carouselAcceuilPosts" data-slide-to="{{ fourth.id }}"></li>
+                <li data-target="#carouselAcceuilPosts" data-slide-to="{{ fifth.id }}"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    {% if first.image %}
+                        <a href="{{ path('newsletter_show', {'id': first.id}) }}">
+                            <img class="d-block w-100" src="{{ asset('uploads/post/') }}{{ first.image }}" alt="">
+                        </a>
                     {% else %}
-                        <svg class="bd-placeholder-img rounded-circle"
-                             width="140"
-                             height="140"
-                             xmlns="http://www.w3.org/2000/svg"
-                             preserveAspectRatio="xMidYMid slice"
-                             focusable="false"
-                             role="img"
-                             aria-label="Placeholder: 140x140">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#777"/>
-                        </svg>
+                        <a href="{{ path('newsletter_show', {'id': first.id}) }}">
+                            <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                        </a>
                     {% endif %}
-                    <h2>{{ post.title }}</h2>
-                    <p>{{ post.body }}</p>
-                    <p><a class="btn btn-secondary" href="{{ path('newsletter_show', {'id': post.id}) }}" role="button">View details &raquo;</a></p>
-                </div>
-            {% else %}
-                <div class="col-lg-4">
-                    no records found
-                </div>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="album py-5">
-        <div class="container">
-            <div class="row">
-                {% for post in posts %}
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            {% if post.image %}
-                                <img class="bd-placeholder-img card-img-top"
-                                     width="100%"
-                                     height="225"
-                                     src="{{ asset('uploads/post/') }}{{ post.image }}" alt="">
-                            {% else %}
-                                <svg class="bd-placeholder-img card-img-top"
-                                     width="100%"
-                                     height="225"
-                                     xmlns="http://www.w3.org/2000/svg"
-                                     preserveAspectRatio="xMidYMid slice"
-                                     focusable="false"
-                                     role="img"
-                                     aria-label="Placeholder: Thumbnail">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"/>
-                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
-                            {% endif %}
-                            <div class="card-body">
-                                <h2>{{ post.title }}</h2>
-                                <p class="card-text">{{ post.body }}</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="{{ path('newsletter_show', {'id': post.id}) }}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ first.title }}</h5>
+                        <p>{{ first.body }}</p>
                     </div>
-                {% else %}
-                    <div class="col-md-4">
-                        no records found
+                </div>
+                <div class="carousel-item">
+                    {% if second.image %}
+                    <a href="{{ path('newsletter_show', {'id': second.id}) }}">
+                        <img class="d-block w-100" src="{{ asset('uploads/post/') }}{{ second.image }}" alt="">
+                    </a>
+                    {% else %}
+                    <a href="{{ path('newsletter_show', {'id': second.id}) }}">
+                        <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                    </a>
+                    {% endif %}
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ second.title }}</h5>
+                        <p>{{ second.body }}</p>
                     </div>
-                {% endfor %}
+                </div>
+                <div class="carousel-item">
+                    {% if third.image %}
+                        <a href="{{ path('newsletter_show', {'id': third.id}) }}">
+                            <img class="d-block w-100" src="{{ asset('uploads/post/') }}{{ third.image }}" alt="">
+                        </a>
+                    {% else %}
+                        <a href="{{ path('newsletter_show', {'id': third.id}) }}">
+                            <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                        </a>
+                    {% endif %}
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ third.title }}</h5>
+                        <p>{{ third.body }}</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    {% if fourth.image %}
+                        <a href="{{ path('newsletter_show', {'id': fourth.id}) }}">
+                            <img class="d-block w-100" src="{{ asset('uploads/post/') }}{{ fourth.image }}" alt="">
+                        </a>
+                    {% else %}
+                        <a href="{{ path('newsletter_show', {'id': fourth.id}) }}">
+                            <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                        </a>
+                    {% endif %}
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ fourth.title }}</h5>
+                        <p>{{ fourth.body }}</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    {% if fifth.image %}
+                        <a href="{{ path('newsletter_show', {'id': fifth.id}) }}">
+                            <img class="d-block w-100" src="{{ asset('uploads/post/') }}{{ fifth.image }}" alt="">
+                        </a>
+                    {% else %}
+                        <a href="{{ path('newsletter_show', {'id': fifth.id}) }}">
+                            <img class="d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
+                        </a>
+                    {% endif %}
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{ fifth.title }}</h5>
+                        <p>{{ fifth.body }}</p>
+                    </div>
+                </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselAcceuilPosts" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselAcceuilPosts" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 {#    <div>#}
