--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     </head>
     <body class="d-flex flex-column">
         <div class="flex-grow-1 flex-shrink-0">
-            <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
                 <a class="navbar-brand" href="{{ path('accueil') }}"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,11 +82,6 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color: black; background: #503D07" href="{{ path('documents') }}">
-                                Documents
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
                                 Documents
                             </a>
@@ -94,6 +89,11 @@
                     </ul>
                 </div>
             </nav>
+            <div style="background: #A93514">
+                <h1 class="display-3 text-center" style="color: black"><strong>LUC JUDO</strong><br/>
+                    <small class="text-white">Judo - Ju Jitsu - Ne Waza - Taiso</small>
+                </h1>
+            </div>
             {% if is_granted('ROLE_ADMIN') %}
                 <div class="text-center">
                     If you see this, that means you're admin.
