--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,7 +92,7 @@
                                 <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
                                 <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
                                 <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
-                                <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
+                                <a class="dropdown-item" href="{{ path('dojo') }}">Dojo-Horaires</a>
                                 <a class="dropdown-item" href="{{ path('palmares') }}">Palmarès</a>
                             </div>
                         </li>
@@ -168,6 +168,11 @@
                             </h1>
                         </div>
                     </div>
+                </div>
+                <div class="container-fluid d-lg-block d-none text-center">
+                    <img src="{{ asset('assets/800px-Ceinture_noire.png') }}"
+                         height="100"
+                         alt="Ceinture Noire">
                 </div>
                 <div class="container-fluid d-md-block d-none">
                     <div class="row text-center justify-content-center">
